# hotdog

./: .gitignore  .gitmodules  FUNDING.yml  README.md  period_measure.ino
hf1/: CMakeLists.txt  hf1.ino  network.h  p2p_byte_stream_arduino.cpp  p2p_byte_stream_arduino.h  p2p_byte_stream_interface.h  p2p_packet_stream.cpp  p2p_packet_stream.h  p2p_packet_stream.hh  p2p_packet_stream_protocol.h  ring_buffer.h  robot_state.h  utils.h
hf1/arduino/: CMakeLists.txt  I2C_eeprom.cpp  I2C_eeprom.h  arduino.ino  base_controller.cpp  base_controller.h  base_imu.cpp  base_imu.h  base_state.h  base_state_filter.cpp  base_state_filter.h  base_trajectory.cpp  base_trajectory.h  battery.cpp  battery.h  bno055.cpp  bno055.h  body_imu.cpp  body_imu.cpp.orig  body_imu.h  body_imu.h.orig  checks.cpp  checks.h  color.cpp  color.h  color_state.h  color_trajectory.cpp  color_trajectory.h  console.cpp  console.h  controller.cpp  controller.h  controller.hh  create_base_mixed_trajectory_view_action_handler.cpp  create_base_mixed_trajectory_view_action_handler.h  create_base_modulated_trajectory_view_action_handler.cpp  create_base_modulated_trajectory_view_action_handler.h  create_base_trajectory_action_handler.cpp  create_base_trajectory_action_handler.h  create_base_trajectory_view_action_handler.cpp  (+129 more)
hf1/arduino/test/: CMakeLists.txt  quaternion2_test.cpp  store_test.cpp  trajectory_test.cpp
hf1/common/: CMakeLists.txt  guid_factory_interface.h  logger_interface.cpp  logger_interface.h  network.cpp  network.h  p2p_application_protocol.cpp  p2p_application_protocol.h  p2p_byte_stream_interface.h  p2p_packet_protocol.h  p2p_packet_stream.cpp  p2p_packet_stream.h  p2p_packet_stream.hh  p2p_packet_stream_protocol.h  p2p_reliable_packet_protocol.h  packed_number.h  priority_ring_buffer.h  ring_buffer.h  status_or.h  timer_interface.h  utils.cpp  utils.h
hf1/common/test/: CMakeLists.txt  README.md  ring_buffer_test.cpp
hf1/linux/: CMakeLists.txt  guid_factory.cpp  guid_factory.h  hf1.cpp  p2p_action_client.cpp  p2p_action_client.h  p2p_byte_stream_linux.cpp  p2p_byte_stream_linux.h  p2p_packet_stream_linux.h  time_sync_client.cpp  time_sync_client.h  time_sync_client.hh  timer_linux.h  uart.cpp  uart.h
