cmake_minimum_required(VERSION 2.8)
find_package(JetsonGPIO)
find_package(OpenCV)
include_directories(${HF1_SOURCE_DIR}/common ${OpenCV_INCLUDE_DIRS})
link_directories(${HF1_SOURCE_DIR}/common)
add_executable(hf1 hf1.cpp p2p_byte_stream_linux.cpp guid_factory.cpp time_sync_client.cpp uart.cpp)
target_link_libraries(hf1 common JetsonGPIO::JetsonGPIO ${OpenCV_LIBS})
